--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "factory-ts",
   "version": "0.5.2-mfc",
+  "author": "Will Pleasant-Ryan + @davidvmckay",
   "license": "MIT",
   "description": "A Typescript test data factory similar to factory_bot and rosie",
+  "repository": "https://github.com/masterpiece-flower-company/factory.ts.git",
+  "main": "lib/index.js",
+  "typings": "lib/index",
+  "files": [ "lib/" ],
   "scripts": {
     "build": "tsc -p .",
     "test": "jest --colors",
@@ -11,50 +16,30 @@
     "build-and-publish": "yarn build && npm login && npm publish"
   },
   "jest": {
-    "reporters": [
-      "default"
-    ],
-    "transform": {
-      "\\.(js|ts)$": "ts-jest"
-    },
+    "reporters": [ "default" ],
+    "transform": { "\\.(js|ts)$": "ts-jest" },
     "testRegex": "./spec/.*\\.spec\\.ts$",
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "json"
-    ],
-    "moduleDirectories": [
-      "src",
-      "node_modules"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest-setup.ts"
-    ]
+    "moduleFileExtensions": [ "js", "ts", "json" ],
+    "moduleDirectories": [ "src", "node_modules" ],
+    "setupFilesAfterEnv": [ "<rootDir>/jest-setup.ts" ]
   },
-  "repository": "https://github.com/masterpiece-flower-company/factory.ts.git",
-  "main": "lib/index.js",
-  "typings": "lib/index",
-  "files": [
-    "lib/"
-  ],
-  "author": "Will Pleasant-Ryan + @davidvmckay",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^14",
-    "eslint": "^7.22.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
-    "jest": "^26.6.3",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^10.17.0",
+    "eslint": "^7.32.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.5.2",
+    "jest": "^27.2.4",
     "jest-environment-node-debug": "^2.0.0",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
-    "typescript": "4.2.4"
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "typescript": "4.4.3"
   },
   "dependencies": {
     "clone-deep": "^4.0.1",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.20"
   }
 }
